WIP 차, 포 움직임 구현 수정 (현재 제대로 동작하지 않아 확인 필요)